--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>AngularAdsense</title>
@@ -8,7 +9,35 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script data-ad-client="ca-pub-8796326028315116" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
+
 <body>
+
   <app-root></app-root>
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-analytics.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyAR98JHiNICc2u84tcbCuc9BHJ0IBFm0gs",
+      authDomain: "angular-adsense.firebaseapp.com",
+      databaseURL: "https://angular-adsense.firebaseio.com",
+      projectId: "angular-adsense",
+      storageBucket: "angular-adsense.appspot.com",
+      messagingSenderId: "857863971966",
+      appId: "1:857863971966:web:5c0b15981780a56943242f",
+      measurementId: "G-YTBDCSTJKQ"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
+
 </body>
+
 </html>
